<resources>
    <string name="app_name">GitExcercise</string>
    <string name="title_login">Login</string>
    <string name="msg_enter_email_address">Enter Email Address</string>
    <string name="msg_enter_password">Enter Password</string>
    <string name="msg_enter_name">Enter Name</string>
    <string name="msg_enter_username">Enter Username</string>
    <string name="hint_enter_email_address">Email Address</string>
    <string name="hint_enter_password">Password</string>
    <string name="hint_enter_username">Username</string>
    <string name="hint_enter_name">Name</string>
    <string name="_1">1</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_create_an_account">Create An Account</string>
    <string name="text_error_email">Email Address is Empty</string>
    <string name="text_error_password">Password is Empty</string>
    <string name="text_error_name">Name is Empty</string>
    <string name="text_error_username">Username is Empty</string>
    <string name="text_enter_full_name">Enter Full Name</string>
    <string name="title_register">Register</string>
    <string name="msg_forgot_password">Enter your Email Address for Identity, We will send you confirmation to change the password</string>
    <string name="text_send">Send</string>
    <string name="msg_forgot_password_email_sent">We have Sent Message Please Check your inbox</string>
    <string name="text_okay">okay</string>
    <string name="msg_login_success">"Login Success"</string>
    <string name="msg_email_send">Email send For Verification</string>
    <string name="msg_email_not_matching_pattern">Email Address is not Appropriate</string>

    <string name="edit">Edit</string>
    <string name="text_Name">Name</string>
    <string name="text_Username">username</string>
    <string name="Save">Save</string>
</resources>