<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.authentication.login.LoginActivity">

    <ImageView
        android:id="@+id/imageCompanyLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_image_normal"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/padding_normal"
        android:src="@drawable/ic_simform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageProfilePic"
        android:layout_width="@dimen/height_image_large"
        android:layout_height="@dimen/height_image_large"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_person_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCompanyLogo" />

    <TextView
        android:id="@+id/textUserName"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:text="@string/text_Username"
        android:textAlignment="center"
        android:textSize="@dimen/text_title"
        app:layout_constraintBottom_toTopOf="@+id/textName"
        app:layout_constraintEnd_toStartOf="@+id/textUserNameRetrieved"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProfilePic"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textUserNameRetrieved"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/text_Username"
        android:textColor="@color/black"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textNameRetrieved"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textUserName"
        app:layout_constraintTop_toBottomOf="@+id/imageProfilePic"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:text="@string/text_Name"
        android:textAlignment="center"
        android:textSize="@dimen/text_title"
        app:layout_constraintBottom_toTopOf="@+id/textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/textNameRetrieved"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUserName" />

    <TextView
        android:id="@+id/textNameRetrieved"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/text_Name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textEmailAddressRetrieved"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textName"
        app:layout_constraintTop_toBottomOf="@+id/textUserNameRetrieved" />

    <TextView
        android:id="@+id/textEmailAddress"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:text="@string/hint_enter_email_address"
        android:textAlignment="center"
        android:textSize="@dimen/text_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textEmailAddressRetrieved"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <TextView
        android:id="@+id/textEmailAddressRetrieved"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/hint_enter_email_address"
        android:textColor="@color/black"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textName"
        app:layout_constraintTop_toBottomOf="@+id/textNameRetrieved" />

    <Button
        android:id="@+id/buttonEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textEmailAddressRetrieved" />

</androidx.constraintlayout.widget.ConstraintLayout>